--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
 .App {
   text-align: center;
 }
-.Header {
+
+.Container {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
+}
+
+h1 {
+  display:flex;
+  align-items: center;
+  justify-content: center;
 }
 /* write your parent styles in here for your App.js */
